--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ wheels/
 pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
+.idea
 .installed.cfg
 *.egg
 MANIFEST
@@ -59,7 +60,7 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3-journal
-
+db.sqlite3
 # Flask stuff:
 instance/
 .webassets-cache
